<resources>
    <string name="app_name">手环测试端</string>
    <string name="edit_text">请输入要发送的字符</string>
    <string name="open_button">开启蓝牙</string>
    <string name="close_button">关闭蓝牙</string>
    <string name="find_button">搜索蓝牙</string>
    <string name="disconnect_bluetooth_button">断开连接</string>
    <string name="listview_button">点击连接</string>
    <string name="listview_textview_mac">Mac:</string>
    <string name="listview_textview_connect">未连接</string>
    <string name="listview_textview_bond">未配对</string>
    <string name="vibrator">振动测试</string>
    <string name="flash">闪光测试</string>
    <string name="ring">铃声测试</string>
    <string name="all">全部警报</string>
    <string name="send_text">发送文本</string>
    <string name="start_monitor">开启断连警报</string>
    <string name="stop_monitor">关闭断连警报</string>
</resources>
